--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index",
+    "dev": "nodemon index"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,8 @@
   "homepage": "https://github.com/Buyaki01/hello-nodejs#readme",
   "dependencies": {
     "date-fns": "^2.29.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
